--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,8 +65,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - lib/assets/images/
-    - lib/assets/icons/
+    - assets/images/
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -82,8 +82,8 @@ flutter:
   fonts:
     - family: JosefinSans
       fonts:
-        - asset: lib/assets/fonts/JosefinSans-Italic-VariableFont_wght.ttf
-        - asset: lib/assets/fonts/JosefinSans-VariableFont_wght.ttf
+        - asset: assets/fonts/JosefinSans-Italic-VariableFont_wght.ttf
+        - asset: assets/fonts/JosefinSans-VariableFont_wght.ttf
           style: italic
           weight: 700
   #
